--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
     <input type="radio" name="slides" id="slide-1-trigger" checked>
     <section class="slide slide-one">
-        <h1>Headline One</h1>
+        <h1>Headline 1</h1>
     </section>
     <input type="radio" name="slides" id="slide-2-trigger">
     <section class="slide slide-two">
